fix(style): overflow:hidden glowballs

--- a/src/App.css
+++ b/src/App.css
@@ -212,10 +212,10 @@
   background: var(--color-surface);
 
   display: flex;
-  /* width: 100%; */
-  /* height: 100dvh; */
   flex-direction: column;
   gap: 2em;
+  position: relative;
+  overflow: hidden;
 }
 
 .current-projects-header {
